--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.7.0
+bs4==0.0.2
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
@@ -16,11 +18,19 @@ dataclasses-json==0.6.4
 distro==1.9.0
 duckduckgo_search==5.3.0
 exceptiongroup==1.2.1
+faiss-cpu==1.8.0
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.43
+google-api-core==2.18.0
+google-api-python-client==2.126.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.63.0
 h11==0.14.0
+html2text==2024.2.26
 httpcore==1.0.5
+httplib2==0.22.0
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.3
@@ -46,13 +56,17 @@ orjson==3.10.1
 packaging==23.2
 pandas==2.2.2
 pillow==10.3.0
+proto-plus==1.23.0
 protobuf==4.25.3
 pyarrow==16.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.7.0
 pydantic_core==2.18.1
 pydeck==0.8.1b0
 Pygments==2.17.2
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
@@ -61,9 +75,11 @@ regex==2024.4.16
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
+rsa==4.9
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+soupsieve==2.5
 SQLAlchemy==2.0.29
 streamlit==1.33.0
 tenacity==8.2.3
@@ -75,5 +91,6 @@ tqdm==4.66.2
 typing-inspect==0.9.0
 typing_extensions==4.11.0
 tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.1
 yarl==1.9.4
